z-indexes added, navigation fixed

--- a/src/Components/Announcements/Announcements.css
+++ b/src/Components/Announcements/Announcements.css
@@ -6,12 +6,22 @@
   background-image: url("./imgs/prev.png");
 }
 
+/* .carousel-control-next,
+.carousel-control-prev {
+  margin-top: 5rem !important;
+} */
+
 .carousel-control-next-icon,
 .carousel-control-prev-icon {
   position: absolute;
   top: 120px;
   height: 40px;
   width: 40px;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  width: 10%;
 }
 
 .carousel-item h3 {
